# m324_todo

./: .gitignore  Cargo.toml  Dockerfile  README.md  all.html  crates.js  docker-compose.yml  help.html  index.html  search-index.js  settings.html  src-files.js
.githooks/: pre-commit  prepare-commit-msg
actix_codec/: trait.AsyncRead.html  trait.AsyncWrite.html
actix_http/: enum.ConnectionType.html  enum.KeepAlive.html  enum.Protocol.html  struct.Method.html  struct.StatusCode.html  struct.Uri.html  struct.Version.html
actix_server/: enum.MpTcp.html  struct.ServerBuilder.html
actix_service/: trait.ServiceFactory.html
actix_web/: all.html  enum.Either.html
anyhow/: struct.Error.html
app/: struct.AppState.html
askama/: all.html  derive.Template.html  enum.Error.html  fn.rerun_if_templates_changed.html  index.html  struct.Html.html  struct.MarkupDisplay.html  struct.Text.html  trait.DynTemplate.html  trait.Template.html  type.Result.html
askama_derive/: all.html  derive.Template.html  index.html
askama_escape/: all.html  fn.escape.html  index.html  struct.EscapeWriter.html  struct.Escaped.html  struct.Html.html  struct.MarkupDisplay.html  struct.Text.html  trait.Escaper.html
askama_parser/: all.html  index.html  struct.Ast.html  struct.ParseError.html  struct.Parsed.html  struct.Syntax.html
basic_toml/: all.html  fn.from_slice.html  fn.from_str.html  fn.to_string.html  index.html  struct.Error.html
bitvec/: all.html  index.html  macro.BitArr.html  macro.bitbox.html  macro.bits.html  macro.bitvec.html
brotli/: all.html  constant.VERSION.html  (+26 more)
(+7882 files in other folders)
