[package]
name = "todo_app"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6.6"
# actix-session = "0.10"
# actix-identity = "0.8.0"
mongodb = "3.2.1"
anyhow = "1.0.95"
futures = "0.3.31"
log = "0.4.25"
env_logger = "0.11.6"
askama = { version = "0.12.1" }
clap = { version = "4.5.29", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.39", features = ["serde"] }
rand = { version = "0.9.0", features = ["small_rng"] }
serde_json = "1.0.139"
