[package]
name = "todo_app"
version = "1.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10"
actix-files = "0.6.6"
actix-session = "0.10"
mongodb = "3.2"
anyhow = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
askama = { version = "0.12" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.9.0", features = ["small_rng"] }
serde_json = "1.0"
